[package]
authors = ["Olger Warnier <olger@spectare.nl>"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server",
]
description = "OIDC authentication extractor for Actix 4"
edition = "2021"
keywords = ["actix", "http", "web", "cryptography"]
license = "MIT"
name = "actix-4-jwt-auth"
repository = "https://github.com/spectare/actix-4-jwt-auth"
version = "1.2.6"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
actix-web = { version="4.10.2", features=["rustls"]}
biscuit = "0.7.0"
#biscuit = { path = "../biscuit/" }
futures = "0.3.31"
futures-core = {version = "0.3.31", default-features = false, features = ["alloc"]}
futures-util = {version = "0.3.31", default-features = false, features = ["alloc"]}
awc = { version="3.6.0", features=["rustls"] }
serde = {version = "1", features = ["derive"]}
serde_derive = "1"
serde_json = "1"
thiserror = "2.0.12"

[dev-dependencies]
pretty_assertions= "1.4.1"
actix-rt = "2.10.0"
bytes = "1.10.1"
ring = "0.17.14"
num = "0.4"
